# shader-record

./: .gitignore  CMakeLists.txt  README.md
config/: deps.cmake  install.cmake  test001.cmake
data/shaders/: shader.frag
include/: OFApp.hpp  ofxVideoRecorder.hpp
src/: OFApp.cpp  main.cpp  ofxVideoRecorder.cpp
